# loose_quadtree

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
cmake/: cpm-dependencies.cmake
src/: CMakeLists.txt  loose_quadtree_impl.hpp
src/impl/: LooseQuadtree-impl.h
src/include/loose_quadtree/: loose_quadtree.hpp
src/test/: loose_quadtree.test.cpp
src/test-old/: LooseQuadtreeTest.cpp
test/: loose_quadtree.test.cpp
